Added query notifications

--- a/src/AdventureWorks/AdventureWorks/Views/Home/Index.cshtml
+++ b/src/AdventureWorks/AdventureWorks/Views/Home/Index.cshtml
@@ -22,8 +22,8 @@
         <p><a class="btn btn-default" href="~/Customer/Index">Customers</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Dapper</h2>
-        <p>This appliaction is implemented using Dapper ORM framework.</p>
-        <p><a class="btn btn-default" href="https://github.com/StackExchange/Dapper">Learn more &raquo;</a></p>
+        <h2>Real-time reporting</h2>
+        <p>This appliaction refreshes reports immediatelly when some rows changes in underlying table using SQL Server Service Broker Query notifications.</p>
+        <p><a class="btn btn-default" href="~/Report.html">Real-time reporting</a></p>
     </div>
 </div>
