--- a/src/AdventureWorks/AdventureWorks/Views/Shared/_Layout.cshtml
+++ b/src/AdventureWorks/AdventureWorks/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                 </button>
                 @Html.ActionLink("Sales", "Index", "SalesOrders", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Customers", "Index", "Customer", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand" href="/Report.html">Report</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
