--- a/src/AdventureWorks/AdventureWorks/Views/Shared/_Layout.cshtml
+++ b/src/AdventureWorks/AdventureWorks/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
             string Database = builder.InitialCatalog;
         }
         <span>Server:</span>
-        <a href="https://msftdbprodsamples.codeplex.com/releases/view/125550" target="_blank"
-           title="SQL Server Adventure Works 2014">@(IPAddress)</a> |
+        <a href="#" target="_blank"
+           title="SQL Server IP">@(IPAddress)</a> |
 
         <span>Database:</span>
         <a href="https://msftdbprodsamples.codeplex.com/releases/view/125550" target="_blank"
